# stock-analysis

./: .gitignore  README.md  README_zh.md  SKILL.md  pyproject.toml  requirements.txt
custom_strategies/: README.md
references/: output-template.md  strategies-guide.md  tools-reference.md
scripts/: _bootstrap.py  data_provider.py  decision_agent.py  intel_agent.py  pipeline.py  risk_agent.py  strategy_manager.py  technical_agent.py
strategies/: README.md  bottom_volume.yaml  box_oscillation.yaml  bull_trend.yaml  chan_theory.yaml  dragon_head.yaml  emotion_cycle.yaml  ma_golden_cross.yaml  one_yang_three_yin.yaml  shrink_pullback.yaml  volume_breakout.yaml  wave_theory.yaml
tests/: test_tools.py
tools/: __init__.py  _providers.py  get_daily_history.py  get_realtime_quote.py  get_sector_rankings.py  get_technical_indicators.py  is_stock_hot.py  search_stock_news.py
