[project]
name = "stock-analysis"
version = "0.1.0"
description = "stock analysis skill for AI agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "akshare>=1.18",
    "yfinance>=1.2",
    "pandas>=2.0",
    "numpy>=2.0",
    "scipy>=1.12",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
]
